# biliup-app-new

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: config.rs  mod.rs  upload.rs  utils.rs  video_edit.rs
src-tauri/src/models/: upload_form.rs  user_config.rs
src-tauri/src/utils/: compatible.rs
src/components/: PublishTimeEditor.vue  SeasonView.vue  TagView.vue  VideoEditorDialog.vue  VideoList.vue
src/stores/: user_config.ts  utils.ts
src/views/: MainView.vue
