[package]
name = "biliup-app"
version = "1.0.2"
edition = "2024"
authors  = ["Jovi Hsu <jv.hsu@outlook.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/biliup/biliup-app-new"
homepage = "https://github.com/biliup/biliup-app-new"
description = "A third-party client which used to upload bilibili videos"
keywords = ["bilibili", "uploader"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "biliup_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
biliup = { git = "https://github.com/HsuJv/biliup.git", rev = "31de46a3dc56bd7d3514e9fd78f0d98b1055e193" }

tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "tracing"] }
futures = "0.3.30"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
anyhow = "1.0"
dirs = "6.0.0"
base64 = "0.22"
url = "2.5"
qrcode = "0.14"
image = "0.25"
chrono = "0.4.41"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2"
indexmap = "2"
bytes="1"
debug-ignore = "1.0"
zip = "5"



[dev-dependencies]
console-subscriber = "0.4"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
